tools/fleet/fixtures/packets/invalid/wrong-project.case
source=valid-work.packet
mutation=set Project-ID to another-project
expected=invalid
